# Algorithms

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/java/org/javacode/: App.java  Exercism.java
app/src/main/java/org/javacode/basics/: StringManipulation.java
app/src/main/java/org/javacode/hackerrank/: LeftRotateArray.java
app/src/main/kotlin/org/kotlincode/: Exercism.kt
app/src/main/kotlin/org/kotlincode/hackerrank/: Arrays.kt
cpp/: CMakeLists.txt  README.md
cpp/playground/MoveSemantics/: Entity.h  Main.cpp  REFERENCE.md  String.h
go/: README.md  go.mod
go/algs/: arrayManipulation.go
go/kata/: main.go
go/kata/bowling/: bowling_game.go  game_settings.go  player.go
go/kata/bowling/gameiface/: gameiface.go
go/kata/bowling/score_cor/: base_handler.go  common_handler.go  roll_handler.go  spare_handler.go  strike_handler.go
go/kata/calculator/: calc.go
go/kata/test/bowling/: bowling_game_test.go  game_settings_test.go  go_suite_test.go
go/kata/test/calculator/: calc_test.go  go_suite_test.go
jvm-langs/: .gitignore  README.md  settings.gradle.kts
jvm-langs/app/: build.gradle.kts
jvm-langs/app/src/main/java/org/javacode/: App.java  (+1 more)
jvm-langs/gradle/: libs.versions.toml
python/: ArrayManipulation.py  StringManipulation.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/src/arrays_hashing/: contains_duplicate.rs  encode_decode.rs  group_anagrams.rs  longest_consecutive.rs  mod.rs  product_except_self.rs  top_k_frequent.rs  two_sum.rs  valid_anagram.rs  valid_sudoku.rs
(+42 files in other folders)
